# pymobiledevice3

./: .gitattributes  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .project  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.txt  DTServices-12.4.txt  LICENSE  MANIFEST.in  NEWS.md  README.md  afc.py  apps.py  asd  asr.py  ca.py  diagnostics_relay.py  extract_plist_from_pcaps.py  file_relay.py  foo.pcap  house_arrest.py  installation_proxy.py  lgtm.yml  lockdown.py  markdownlint-config.json  mkdocs.yml  mobile_config.py  mobilebackup.py  mobilebackup2.py  notification_proxy.py  pcapd.py  plist_service.py  pyproject.toml  pytest.ini  requirements.txt  screenshotr.py  (+3 more)
.claude-plugin/: marketplace.json
.claude/skills/: pymobiledevice3-device-operator  tss-batch-prefetch
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  docs.yml  generate-executable.py  homebrew-tap.yml  markdown-lint.yml  plugin-skill-sync.yml  python-app.yml  python-publish.yml
backups/1da9ae263353356291a8e72b72526c2681b8424f/: Info.plist  Manifest.mbdb  Manifest.plist  Status.plist
docs/: CODE_OF_CONDUCT.md  README.md  conf.py  index.md  index.rst  installation.md  robots.txt
docs/_hooks/: inject_external.py
docs/api/: apps-files.md  backup-symbols.md  capture.md  connection.md  dvt.md  index.md  services.md  system.md
docs/api_reference/: pymobiledevice3.ca.rst  pymobiledevice3.common.rst  pymobiledevice3.exceptions.rst  pymobiledevice3.irecv.rst  pymobiledevice3.irecv_devices.rst  pymobiledevice3.lockdown.rst  pymobiledevice3.rst  pymobiledevice3.service_connection.rst  pymobiledevice3.services.accessibilityaudit.rst  pymobiledevice3.services.afc.rst  pymobiledevice3.services.amfi.rst  pymobiledevice3.services.base_service.rst  pymobiledevice3.services.companion.rst  pymobiledevice3.services.crash_reports.rst  pymobiledevice3.services.debugserver_applist.rst  pymobiledevice3.services.device_arbitration.rst  pymobiledevice3.services.device_link.rst  pymobiledevice3.services.diagnostics.rst  pymobiledevice3.services.dtfetchsymbols.rst  pymobiledevice3.services.dvt.dvt_secure_socket_proxy.rst  pymobiledevice3.services.dvt.instruments.activity_trace_tap.rst  pymobiledevice3.services.dvt.instruments.application_listing.rst  pymobiledevice3.services.dvt.instruments.condition_inducer.rst  pymobiledevice3.services.dvt.instruments.core_profile_session_tap.rst  pymobiledevice3.services.dvt.instruments.device_info.rst  pymobiledevice3.services.dvt.instruments.energy_monitor.rst  pymobiledevice3.services.dvt.instruments.graphics.rst  pymobiledevice3.services.dvt.instruments.network_monitor.rst  pymobiledevice3.services.dvt.instruments.notifications.rst  pymobiledevice3.services.dvt.instruments.process_control.rst  pymobiledevice3.services.dvt.instruments.rst  pymobiledevice3.services.dvt.instruments.screenshot.rst  pymobiledevice3.services.dvt.instruments.sysmontap.rst  pymobiledevice3.services.dvt.rst  pymobiledevice3.services.file_relay.rst  pymobiledevice3.services.heartbeat.rst  pymobiledevice3.services.house_arrest.rst  pymobiledevice3.services.installation_proxy.rst  pymobiledevice3.services.misagent.rst  pymobiledevice3.services.mobile_activation.rst  (+30 more)
docs/assets/: social-card.html
docs/guides/: cli-recipes.md  codex-device-operator-skill.md  ios17-tunnels.md  python-api.md  wda-scripting.md  writing-commands-with-service-provider.md
hack/: RSD.md  RemoteXPC.md  extract_plist_from_pcaps.py
misc/: DTServices-14.2.txt  DTServices-14.5.txt  RemoteXPC.md  plist_sniffer.py  py2exe.md  pyinstaller.md  remotexpc_sniffer.py  rtp_dump.py  understanding_idevice_protocol_layers.md
misc/claude-plugin/: sync_skill.py
overrides/: main.html
pymobiledevice/: afc.py  apis.py  apps.py  ca.py  diagnostics_relay.py  file_relay.py  house_arrest.py  installation_proxy.py  lockdown.py  mobile_config.py  mobilebackup.py  mobilebackup2.py  notification_proxy.py  pcapd.py  plist_service.py  sbservices.py  screenshotr.py  syslog.py  version.py
pymobiledevice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pymobiledevice/usbmux/: tcprelay.py  usbmux.py
pymobiledevice/util/: __init__.py  bpatch.py  ccl_bplist.py  cpio.py  lzss.py
pymobiledevice3/: .ruff.toml  __main__.py  acquisition.py  afc.py  apis.py  apps.py  bonjour.py  ca.py  cli.py  common.py  construct_compat.py  diagnostics_service.py  dsc_uuid_map.json  dtx_proxy_service.py  dtx_service.py  dtx_service_provider.py  dvt_secure_socket_proxy.py  exceptions.py  file_relay.py  file_relay_service.py  house_arrest.py  house_arrest_service.py  installation_proxy_service.py  irecv.py  irecv_devices.py  lockdown.py  lockdown_service_provider.py  mobile_config.py  mobile_image_mounter_service.py  mobilebackup.py  mobilebackup2.py  notification_proxy_service.py  os_trace_service.py  pair_records.py  pcapd_service.py  plist_service.py  plist_types.py  sbservices_service.py  screenshot_service.py  service_connection.py  (+6 more)
pymobiledevice3/cli/: acquisition.py  activation.py  afc.py  amfi.py  apps.py  backup.py  bonjour.py  btlogger.py  cli_common.py  companion_proxy.py  completions.py  crash.py  developer.py  diagnostics.py  file_relay.py  idam.py  list_devices.py  lockdown.py  mounter.py  pcap.py  (+16 more)
test/: __init__.py  afc_test.py  crashreportcopymobile_test.py  diagnostics_relay_test.py  house_arrest_test.py  installation_proxy_test.py  listdevice_test.py  screenshotr_test.py  syslog_relay_test.py
tests/: __init__.py  conftest.py  crashreportcopymobile_test.py  diagnostics_relay_test.py  house_arrest_test.py  installation_proxy_test.py  listdevice_test.py  syslog_relay_test.py  test_acquisition.py  test_pytcp_compat.py  test_remote_pairing_host.py  test_remote_utils.py  test_remotexpc.py  test_screenshotr_relay.py  test_service_connection.py  test_syslog_relay.py  test_tunneld_monitor.py  test_userspace_tunnel.py  test_utils.py
usbmux/: usbmux.py
util/: __init__.py  asciitables.py  bdev.py  cert.py  cpio.py  lzss.py
(+291 files in other folders)
